--- a/StrategicAssetAllocationAssistant/app/src/main/AndroidManifest.xml
+++ b/StrategicAssetAllocationAssistant/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:networkSecurityConfig="@xml/network_security_config"
-        android:name=".MainApplication"
+        android:name="com.example.strategicassetallocationassistant.MainApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StrategicAssetAllocationAssistant">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.strategicassetallocationassistant.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.StrategicAssetAllocationAssistant">
