--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -9,6 +9,8 @@ on:
       tag:
         description: 'The tag to create for the release (e.g., v0.0.2-test)'
         required: true
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   build-and-release:
@@ -20,6 +22,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Determine Tag Name
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         id: get_tag
         run: |
           if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
@@ -67,6 +70,7 @@ jobs:
           echo "apk_path=$apk_path" >> $GITHUB_OUTPUT
 
       - name: Create Release
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         uses: softprops/action-gh-release@v2
         with:
           files: ${{ steps.find_apk.outputs.apk_path }}
@@ -75,3 +79,10 @@ jobs:
           prerelease: ${{ github.event_name == 'workflow_dispatch' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload APK for PR
+        if: github.event_name == 'pull_request'
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-apk
+          path: ${{ steps.find_apk.outputs.apk_path }}
